<resources>
    <string name="app_name">Strims Mobile</string>
    <string name="username">Username</string>
    <string name="message">Message</string>
    <string name="log_in_to_send_messages">Log in to send messages</string>
    <string name="more_messages_below">More messages below</string>
    <string name="title">Title</string>
    <string name="close">Close</string>
    <string name="show_timestamps_on_messages">Show timestamps on messages</string>
    <string name="greentext">Greentext</string>
    <string name="harsh_ignore">Harsh Ignore</string>
    <string name="hide_nsfw_nsfl_content">Hide NSFW/NSFL content</string>
    <string name="push_notifications">Push notifications</string>
    <string name="emotes">Emotes</string>
    <string name="ignored_users">Ignored Users:</string>
    <string name="highlighted_users">Highlighted Users:</string>
    <string name="save">Save</string>
    <string name="stream_path">Stream Path</string>
    <string name="streaming_service">Streaming Service</string>
    <string name="channel_video_id">Channel/Video ID</string>
    <string name="username_search">Username search …</string>
    <string name="timestamp">Timestamp</string>
    <string name="streamer">Streamer</string>
    <string name="whisper">Whisper</string>
    <string name="mention">Mention</string>
    <string name="ignore">Ignore</string>
    <string name="streams">Streams</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="login">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="show_what_i_m_watching_in_chat">Show what I\'m watching in chat</string>
    <string name="whispers">Whispers</string>
    <string name="private_messages">Private Messages</string>
    <string name="help">"/me - A normal message, but emotive.\n/message - Whisper someone.\n/ignore &lt;nick&gt; - No longer see user messages, without &lt;nick&gt; to list the nicks ignored.\n/unignore - Remove a user from your ignore list.\n/highlight - Highlights target nicks messages for easier visibility.\n/unhighlight - Unhighlights target nick."</string>

    <string-array name="streaming_service_spinner">
        <item name="angelthump">AngelThump</item>
        <item name="facebook">Facebook</item>
        <item name="m3u8">m3u8</item>
        <item name="mixer">Mixer</item>
        <item name="smashcast">Smashcast</item>
        <item name="twitch">Twitch</item>
        <item name="twitch-vod">Twitch (VOD)</item>
        <item name="ustream">Ustream</item>
        <item name="vaughn">Vaughn</item>
        <item name="youtube">YouTube</item>
        <item name="youtube-playlist">YouTube (Playlist)</item>
        <item name="advanced">Advanced</item>
    </string-array>

    <string-array name="streaming_service_spinner_names">
        <item>angelthump</item>
        <item>facebook</item>
        <item>m3u8</item>
        <item>mixer</item>
        <item>smashcast</item>
        <item>twitch</item>
        <item>twitch-vod</item>
        <item>ustream</item>
        <item>vaughn</item>
        <item>youtube</item>
        <item>youtube-playlist</item>
        <item>advanced</item>
    </string-array>

    <string-array name="modifiersArray">
        <item>banned</item>
        <item>dank</item>
        <item>fast</item>
        <item>flip</item>
        <item>hyper</item>
        <item>lag</item>
        <item>love</item>
        <item>mirror</item>
        <item>rain</item>
        <item>rustle</item>
        <item>slow</item>
        <item>smol</item>
        <item>snow</item>
        <item>spin</item>
        <item>virus</item>
        <item>wide</item>
        <item>worth</item>
    </string-array>

    <string-array name="commandsArray">
        <item>w</item>
        <item>whisper</item>
        <item>msg</item>
        <item>tell</item>
        <item>t</item>
        <item>notify</item>
    </string-array>

    <string name="nav_header_desc">Navigation header</string>

    <string name="settings">Settings</string>
    <string name="anonymous">Anonymous</string>
    <string name="_2">2</string>
    <string name="x">X</string>
    <string name="hits">HITS</string>
    <string name="show_stream_viewer_indicators">Show stream viewer indicators</string>
    <string name="filter_emotes">Filter emotes</string>
    <string name="to">To</string>
    <string name="whispered">whispered:</string>
    <string name="stream_thumbnail">Stream thumbnail</string>
    <string name="stream_viewer_count_image">Stream viewer count image</string>
    <string name="stream_viewer_state_colour">Stream viewer state colour</string>
    <string name="autofill_item_emote">Autofill item emote</string>
    <string name="bot_flair">Bot flair</string>
    <string name="viewer_state_colour">Viewer state colour</string>
    <string name="consecutive_chat_message_chevron">Consecutive chat message chevron</string>
    <string name="combo_animation">Combo animation</string>
    <string name="emote_item">Emote item</string>
    <string name="chat_error_message">Chat error message</string>
    <string name="separator_between_angelthump_fragment_and_chat_fragment">Separator between AngelThump Fragment and Chat Fragment</string>
    <string name="separator_between_twitch_fragment_and_chat_fragment">Separator between Twitch Fragment and Chat Fragment</string>
    <string name="separator_between_youtube_fragment_and_chat_fragment">Separator between YouTube Fragment and Chat Fragment</string>
    <string name="white_divider_between_navigation_drawer_header_and_drawer_items">White divider between navigation drawer header and drawer items</string>
    <string name="user_online_indicator">User online indicator</string>
    <string name="channel_presents_title_via_service">%1$s presents %2$s via %3$s</string>
    <string name="chat_whisper_popup">/w %1$s\u0020</string>
    <string name="chat_mention_popup">%1$s </string>
    <string name="autofill_whisper_command1">/%1$s</string>
    <string name="autofill_whisper_command2">/%1$s\u0020</string>
    <string name="autofill_user_item1">%1$s %2$s\u0020</string>
    <string name="autofill_user_item2">%1$s\u0020</string>
    <string name="autofill_item_modifier">%1$s%2$s\u0020</string>
    <string name="combo_hits">HITS</string>
    <string name="combo_ccccombo">C-C-C-COMBO</string>
    <string name="picture_in_picture_mode">Picture-in-picture mode</string>
    <string name="chat_message_username">%1$s:</string>
</resources>
