<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chatStreams"
        android:icon="@drawable/ic_videocam_orange_24dp"
        android:title="@string/streams" />
    <item
        android:id="@+id/chatChat"
        android:icon="@drawable/ic_chat_orange_24dp"
        android:title="@string/chat" />
    <item
        android:id="@+id/chatProfile"
        android:icon="@drawable/ic_person_orange_24dp"
        android:title="@string/profile"
        android:visible="false" />
    <item
        android:id="@+id/chatLogin"
        android:icon="@drawable/ic_arrow_forward_orange_24dp"
        android:title="@string/login" />
    <item
        android:id="@+id/chatWhispers"
        android:icon="@drawable/ic_mail_orange_24dp"
        android:title="@string/whispers"
        android:visible="false" />
</menu>