<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:minHeight="44dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000">

    <TextView
        android:id="@+id/usernameChatMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/viewerStateChatMessage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageChatMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:maxWidth="200dp"
        android:text="@string/message"
        android:textColor="#AAAAAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameChatMessage" />

    <TextView
        android:id="@+id/timestampChatMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:textColor="#737373"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/usernameChatMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameChatMessage"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/botFlairChatMessage"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:visibility="gone"
        android:contentDescription="@string/bot_flair"
        app:layout_constraintBottom_toBottomOf="@+id/timestampChatMessage"
        app:layout_constraintStart_toEndOf="@id/timestampChatMessage"
        app:layout_constraintTop_toTopOf="@id/timestampChatMessage"
        app:srcCompat="@drawable/ic_android_bot_24dp"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/viewerStateChatMessage"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/viewer_state_colour"
        app:layout_constraintBottom_toBottomOf="@+id/botFlairChatMessage"
        app:layout_constraintStart_toEndOf="@+id/botFlairChatMessage"
        app:layout_constraintTop_toTopOf="@+id/botFlairChatMessage"
        app:srcCompat="@drawable/ic_baseline_fiber_manual_record_24" />

</androidx.constraintlayout.widget.ConstraintLayout>