<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:minHeight="30dp"
    android:layout_height="wrap_content"
    android:background="#000000">


    <ImageView
        android:id="@+id/chevronChatMessage"
        android:layout_width="10dp"
        android:layout_height="12dp"
        android:layout_marginTop="2dp"
        android:visibility="visible"
        android:contentDescription="@string/consecutive_chat_message_chevron"
        app:layout_constraintBottom_toBottomOf="@id/messageChatMessage"
        app:layout_constraintStart_toEndOf="@+id/timestampChatMessage"
        app:layout_constraintTop_toTopOf="@id/messageChatMessage"
        app:srcCompat="@drawable/gray_right_chevron"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/usernameChatMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/messageChatMessage"
        app:layout_constraintStart_toEndOf="@id/messageChatMessage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/messageChatMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:maxWidth="200dp"
        android:text="@string/message"
        android:textColor="#AAAAAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chevronChatMessage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timestampChatMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="#737373"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/messageChatMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/messageChatMessage"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/botFlairChatMessage"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:visibility="gone"
        android:contentDescription="@string/bot_flair"
        app:layout_constraintBottom_toBottomOf="@+id/timestampChatMessage"
        app:layout_constraintStart_toEndOf="@id/timestampChatMessage"
        app:layout_constraintTop_toTopOf="@id/timestampChatMessage"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_android_bot_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>